--- a/consoel.vcxproj.filters
+++ b/consoel.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="consoel.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="console.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
